[tool.poetry]
name = "mm1-level-gen-server"
version = "0.1.0"
description = ""
authors = ["arfrie22 <43021241+arfrie22@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
aiohttp-cors = "^0.7.0"
k-diffusion = {git = "https://github.com/crowsonkb/k-diffusion.git"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
